docs-archive/apache-airflow-providers-common-ai/0.10.0/_sources/_api/airflow/providers/common/ai/example_dags/example_llm_retry_policy/index.rst.txt
airflow.providers.common.ai.example_dags.example_llm_retry_policy
=================================================================

.. py:module:: airflow.providers.common.ai.example_dags.example_llm_retry_policy

.. autoapi-nested-parse::

   Example DAG demonstrating LLM-powered retry policies.

   ``llm_policy`` is the plain form: a text model classifies the failure and decides whether to
   retry and how long to wait, guided by its instructions. ``patient_policy`` and the
   classifier-model policies are ``ClassifierRetryPolicy``: the model only names the kind of failure
   and the policy's table decides the action, the delay and how sure the model has to be.

   Prerequisites:
     - Connection ``pydanticai_default`` with ``conn_type='pydanticai'``,
       ``password=<API key>``, ``extra='{"model": "anthropic:claude-haiku-4-5-20251001"}'``
     - ``pip install apache-airflow-providers-common-ai[anthropic]``
     - For the classifier-model Dag: connection ``jev_default`` with
       ``extra='{"model": "typesafe:jev-1.13.0"}'`` and
       ``pip install 'apache-airflow-providers-common-ai[typesafe]'``



Attributes
----------

.. autoapisummary::

   airflow.providers.common.ai.example_dags.example_llm_retry_policy.llm_policy


Module Contents
---------------

.. py:data:: llm_policy

